Replace non-j2me compliant use of Integer.valueOf